--- a/server/package.json
+++ b/server/package.json
@@ -12,19 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "better-sqlite3": "^7.1.2",
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "json2csv": "^5.0.5",
     "nodemon": "^2.0.7",
-    "sqlite3": "^5.0.1"
+    "pg": "^8.5.1"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^5.4.1",
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
     "@types/json2csv": "^5.0.1",
-    "@types/sqlite3": "^3.1.6"
+    "@types/pg": "^7.14.10"
   }
 }
