--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^5.3.0"
+    "@vueuse/core": "^4.4.1",
+    "concurrently": "^5.3.0",
+    "vuedraggable": "^4.0.1"
   },
   "devDependencies": {}
 }
