--- a/client/package.json
+++ b/client/package.json
@@ -8,15 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vueuse/core": "^4.4.1",
     "apexcharts": "^3.23.1",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "datalib": "^1.9.3",
     "element-plus": "^1.0.2-beta.32",
-    "javascript-lp-solver": "^0.4.24",
     "vue": "^3.0.2",
     "vue-router": "^4.0.0-0",
-    "vue3-apexcharts": "^1.1.1"
+    "vue3-apexcharts": "^1.1.1",
+    "vuedraggable": "^4.0.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
