--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -12,9 +12,7 @@
     "sourceMap": true,
     "baseUrl": ".",
     "types": [
-      "webpack-env",
-      "javascript-lp-solver/types",
-      "./types"
+      "webpack-env"
     ],
     "paths": {
       "@/*": [
@@ -31,9 +29,7 @@
   "include": [
     "src/**/*.ts",
     "src/**/*.tsx",
-    "src/**/*.vue",
-    "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "src/**/*.vue"
   ],
   "exclude": [
     "node_modules"
