--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@vueuse/core": "^4.4.1",
-    "concurrently": "^5.3.0",
-    "vuedraggable": "^4.0.1"
+    "concurrently": "^5.3.0"
   },
   "devDependencies": {}
 }
