--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,14 @@
     "@tiptap/core": "^2.0.0-beta.9",
     "@tiptap/vue-3": "^2.0.0-beta.7",
     "@vueuse/core": "^4.4.1",
+    "@vueuse/integrations": "^4.6.3",
     "apexcharts": "^3.23.1",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "datalib": "^1.9.3",
     "element-plus": "^1.0.2-beta.32",
+    "jwt-decode": "^3.1.2",
+    "universal-cookie": "^4.0.4",
     "vue": "^3.0.7",
     "vue-router": "^4.0.0-0",
     "vue3-apexcharts": "^1.1.1",
