--- a/server/package.json
+++ b/server/package.json
@@ -13,16 +13,20 @@
   "license": "ISC",
   "dependencies": {
     "concurrently": "^5.3.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "json2csv": "^5.0.6",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.7",
     "pg": "^8.5.1"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
     "@types/json2csv": "^5.0.1",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/pg": "^7.14.10"
   }
 }
